--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -5,6 +5,7 @@
     <title>Client</title>
     <base href="/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="refresh" content="5;URL=app/app.component.html" />
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
       <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
