✨ (Availability): testing setup.

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -16,5 +16,6 @@
 <body class="mat-typography">
     <training-buddy-root></training-buddy-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <script src="//rum-static.pingdom.net/pa-632c97710d7ce5001100130f.js" async></script>
 </body>
 </html>
